# Typematic

./: .gitmodules  CONTRIBUTING.md  README.md
.github/workflows/: main-branch-sync.yml  typematic.yml
clang/lib/3C/: 3C.cpp  3CStats.cpp  CastPlacement.cpp  CheckedRegions.cpp  ConstraintBuilder.cpp  ConstraintResolver.cpp  ConstraintVariables.cpp  Constraints.cpp  ConstraintsGraph.cpp  DeclRewriter.cpp  MultiDecls.cpp  ProgramInfo.cpp  RewriteUtils.cpp  StructInit.cpp  Utils.cpp  constraints_analysis.py  (+1 more)
clang/tools/3c/: 3CStandalone.cpp  CMakeLists.txt
include/: stdlib_tainted.h
tests/: Makefile  array_access.c  assign_value.c  callback.c  callback.ll  dynamic_memory.c  example.txt  file_operations.c  fp.c  pointer_arithmetic.c  simple.c  string_concat.c
typematic-tests/input/: choke.py  complexbuffer.c  complexbuffer_float.c  fptr_in_struct.c  functionPointers.c  lbm.c  linearbufferwrapper.c  macro.c  nsimple.c  propagateThroughStructures.c  qualified_fptr.c  simple.c  structsimple.c  structsimple_1.c  structsimple_2.c  structsimple_3.c  taintexplosion.c  typedef.c  typedef_2.c
typematic-tests/output/: a.out  complexbuffer_expected.c  complexbuffer_float_expected.c  fptr_in_struct_expected.c  functionPointers_expected.c  linearbufferwrapper_expected.c  macro_expected.c  nsimple_expected.c  propagateThroughStructures_expected.c  qualified_fptr_expected.c  simple_expected.c  structsimple_1_expected.c  structsimple_1_op.c  structsimple_2_expected.c  structsimple_2_op.c  structsimple_3_expected.c  structsimple_expected.c  typedef_2_expected.c  typedef_expected.c
(+38 files in other folders)
